<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyBankApp</string>

    <!-- Login Activity string values -->
    <string name="MM_BankAnalyzer_Logo">MM BankAnalyzer Logo</string>
    <string name="EMail_address">Email Address</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">New User ?</string>

    <!-- Permissions string values -->
    <string name="descr_permission_provider_READ">Allows an app to read your Bank Account Statements</string>
    <string name="descr_permission_provider_WRITE">Allows an app to add or modify existing Bank Account Statements</string>
    <string name="label_permission_provider_READ">Reading Bank Account Statments</string>
    <string name="label_permission_provider_WRITE">Adding and Changing Bank Account Statements</string>
    
    <!-- BankAccount manager table fields strings -->
    <string name="idBank">1</string>
    <string name="bankLogo">Bank Logo</string>
    <string name="bankName">Bank Name</string>
    <string name="bankAddress">Address of the Bank</string>
    <string name="bankCountry">Country</string>
    <string name="accountIban">Ex. IT000</string>
    
    <string name="dateOperation">15/02/2015</string>
    <string name="dateValue">15/10/2015</string>
    
    <!-- BankAccount manager table fields example value strings -->
    
    <string name="add_new_bankaccount">Add new bank account</string>
    <string name="list_banks">List banks</string>
</resources>
