<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="17dp"
    android:paddingRight="17dp"
    android:weightSum="1">

    <ImageView
        android:layout_width="149dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:id="@+id/imageView"
        android:padding="10dp"
        android:layout_weight="0.31"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/MM_BankAnalyzer_Logo" />

    <EditText android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/EMail_address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        />

    <EditText android:id="@+id/accountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:padding="10dp"
        />

    <Button android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/SignIn"
        android:padding="10dp"/>

    <TextView android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/SignUp"
        android:padding="10dp"/>

</LinearLayout>