<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:orientation="vertical">

    <!-- -->
    <TextView
        android:id="@+id/idBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:textSize="24sp"
        android:text="@string/idBank" >
    </TextView>

    <TextView
        android:id="@+id/bankAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bankCountry"
        android:layout_alignStart="@+id/bankCountry"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/idBank"
        android:layout_marginLeft="10dip"
        android:layout_marginStart="10dip"
        android:text="@string/bankAddress" />

    <TextView
        android:id="@+id/bankCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/idBank"
        android:layout_alignStart="@+id/idBank"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bankAddress"
        android:layout_marginStart="10dip"
        android:layout_marginLeft="10dip"
        android:text="@string/bankCountry" />

    <TextView
        android:id="@+id/bankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bankAddress"
        android:layout_toEndOf="@+id/idBank"
        android:layout_toRightOf="@+id/idBank"
        android:text="@string/bankName"
        android:textSize="24sp" />

</RelativeLayout>